Bug 1506998 - DC's environment tab not showing image secrets properly

--- a/app/styles/_kve.less
+++ b/app/styles/_kve.less
@@ -146,6 +146,9 @@
         float: left;
         width: 100%;
       }
+      .has-warning {
+        display: inline-block;
+      }
     }
   }
 
